--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
+    "animate.css": "^3.7.2",
     "ant-design-vue": "^1.4.10",
     "nuxt": "^2.0.0",
-    "vue2-filters": "^0.9.1"
+    "vue2-filters": "^0.9.1",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
