--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^3.7.2",
     "ant-design-vue": "^1.4.10",
     "nuxt": "^2.0.0",
+    "vue-scrollto": "^2.17.1",
     "vue2-filters": "^0.9.1",
     "vuelidate": "^0.7.5"
   },
