--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ant-design-vue": "^1.4.10",
     "nuxt": "^2.0.0",
     "vue-scrollto": "^2.17.1",
+    "vue-the-mask": "^0.11.1",
     "vue2-filters": "^0.9.1",
     "vuelidate": "^0.7.5"
   },
