--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "ant-design-vue": "^1.4.10",
     "lodash": "^4.17.15",
     "nuxt": "^2.0.0",
+    "vue-lazyload": "^1.3.3",
     "vue-scrollto": "^2.17.1",
     "vue-the-mask": "^0.11.1",
     "vue2-filters": "^0.9.1",
+    "vue2-perfect-scrollbar": "^1.3.0",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
