--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/yandex-metrika": "^1.0.3",
+    "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/yandex-metrika": "^1.1.0",
     "animate.css": "^3.7.2",
-    "ant-design-vue": "^1.4.10",
+    "ant-design-vue": "^1.6.3",
     "hamburgers": "^1.1.3",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.13.3",
     "vue-lazyload": "^1.3.3",
-    "vue-scrollto": "^2.17.1",
+    "vue-scrollto": "^2.18.1",
     "vue-the-mask": "^0.11.1",
     "vue2-filters": "^0.9.1",
-    "vue2-perfect-scrollbar": "^1.3.0",
+    "vue2-perfect-scrollbar": "^1.5.0",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
     "less": "^2.7.2",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2"
   }
 }
