--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ant-design-vue": "^1.6.3",
     "hamburgers": "^1.1.3",
     "nuxt": "^2.13.3",
+    "nuxt-facebook-pixel-module": "^1.3.0",
     "vue-lazyload": "^1.3.3",
     "vue-scrollto": "^2.18.1",
     "vue-the-mask": "^0.11.1",
