--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nuxt-facebook-pixel-module": "^1.3.0",
     "vue-lazyload": "^1.3.3",
     "vue-scrollto": "^2.18.1",
+    "vue-slick-carousel": "^1.0.6",
     "vue-the-mask": "^0.11.1",
     "vue2-filters": "^0.9.1",
     "vue2-perfect-scrollbar": "^1.5.0",
