--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "vue-the-mask": "^0.11.1",
     "vue2-filters": "^0.9.1",
     "vue2-perfect-scrollbar": "^1.5.0",
+    "vuejs-countdown": "^0.2.1",
+    "vuejs-countdown-timer": "^2.1.3",
     "vuelidate": "^0.7.5"
   },
   "devDependencies": {
